--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bap er Bank!!</title>
+    <title>Bank Of Programer</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <h2 class="text-5xl text-center mt-16">Welcome to My <span class="text-rose-700 font-semibold">Bap-Er Bank</span>!!!!</h2>
+<body class="bg-slate-400">
+    <h2 class="text-5xl text-center mt-16">Welcome to The <span class="text-rose-700 font-semibold">Bank Of Programer</span></h2>
+     <h2 class="text-3xl text-center mt-8">
+        প্রোগ্রামারদের  ব্যাঙ্ক এ আপনাকে স্বাগতম 
+     </h2>
     <section class="mt-10">
-        <div class="w-3/4 mx-auto p-8 bg-amber-300 rounded">
+        <div class="w-3/4 mx-auto p-8 bg-amber-300 rounded shadow-md">
            <div class="w-3/4 mx-auto">
             <h2 class="text-2xl mb-4">Please Login</h2>
            </div>
            <div class="w-3/4 mx-auto ">
                <p id="returne"></p>
-          <input id="email" type="text" placeholder="Type Your Email" class="block w-full mb-4 px-4 py-1 text-base focus:outline-none" required>
-          <input id="password" type="password" placeholder="Type Your Password" class="block mb-4 w-full px-4 py-1 text-base focus:outline-none" required>
+          <input id="email" type="text" placeholder="Type Your Email" class="block w-full mb-4 px-4 py-1 text-base focus:outline-none rounded-sm" required>
+          <input id="password" type="password" placeholder="Type Your Password" class="block mb-4 w-full px-4 py-1 text-base focus:outline-none rounded-sm" required>
           <button id="login" class="py-2 px-5 text-white text-xl bg-red-600 rounded">Login</button>
         </div>
         </div>
