--- a/account.html
+++ b/account.html
@@ -8,7 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-400">
-    <h2 class="text-5xl text-center mt-16 mb-8">Lets Gets Some <span class="text-rose-700 font-semibold">Mooooooney</span>!!!!</h2>
+    <img src="./download.jpg" class="block h-20 mx-auto rounded-md mt-10" alt="">
+    <h2 class="text-4xl text-center mt-5  mb-8">Mr.<span class="text-rose-700 font-semibold">Hablu Boss</span></h2>
     <section>
         <div class="grid grid-cols-3 w-3/4 mx-auto gap-5 mb-9">
              <div class="p-10 bg-emerald-300 rounded">
