--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         প্রোগ্রামারদের  ব্যাঙ্ক এ আপনাকে স্বাগতম 
      </h2>
     <section class="mt-10">
-        <div class="w-3/4 mx-auto p-8 bg-amber-300 rounded shadow-md">
+        <div class="w-3/4 mx-auto p-8 bg-amber-300 rounded shadow-lg">
            <div class="w-3/4 mx-auto">
             <h2 class="text-2xl mb-4">Please Login</h2>
            </div>
