--- a/account.html
+++ b/account.html
@@ -11,7 +11,7 @@
     <img src="./download.jpg" class="block h-20 mx-auto rounded-md mt-10" alt="">
     <h2 class="text-4xl text-center mt-5  mb-8">Mr.<span class="text-rose-700 font-semibold">Hablu Boss</span></h2>
     <section>
-        <div class="grid grid-cols-3 w-3/4 mx-auto gap-5 mb-9">
+        <div class="grid  md:grid-cols-2 grid-cols-1 lg:grid-cols-3 w-3/4 mx-auto gap-5 mb-9">
              <div class="p-10 bg-emerald-300 rounded">
                 <h2 class="text-3xl font-semibold text-white">Deposit</h2>
                   <h3 class="text-4xl font-semibold text-white">$<span id="Deposit">00</span></h3>
@@ -27,7 +27,7 @@
            
              
         </div>
-        <div class="grid grid-cols-2 w-3/4 mx-auto gap-5">
+        <div class="grid md:grid-cols-2 grid-cols-1 lg:grid-cols-2 w-3/4 mx-auto gap-5">
             <div class="p-10 bg-lime-300 rounded">
                <h2 class="text-3xl font-semibold text-white mb-3">Please Deposit</h2>
                <p id="returne"></p>
